# projet6-mlops

./: .gitignore  main.py  pyproject.toml
notebooks/: 01_exploration.ipynb  02_feature_engineering.ipynb  03_modelisation_mlflow.ipynb
